--- a/notebooks/train_model_keras.ipynb
+++ b/notebooks/train_model_keras.ipynb
@@ -267,7 +267,7 @@
       "\n",
       "Epoch 00001: val_loss improved from inf to 0.10061, saving model to /data/nasif12/home_if12/chengju/project/HumanProteinAtlas/hpa_src/../data/../models/InceptionV3.h5\n",
       "Epoch 2/100\n",
-      " 592/1554 [==========>...................] - ETA: 1:59:42 - loss: 0.1078 - f1: 0.1818"
+      "1028/1554 [==================>...........] - ETA: 1:04:30 - loss: 0.1077 - f1: 0.1813"
      ]
     }
    ],
