--- a/notebooks/train_model_keras.ipynb
+++ b/notebooks/train_model_keras.ipynb
@@ -267,7 +267,21 @@
       "\n",
       "Epoch 00001: val_loss improved from inf to 0.10061, saving model to /data/nasif12/home_if12/chengju/project/HumanProteinAtlas/hpa_src/../data/../models/InceptionV3.h5\n",
       "Epoch 2/100\n",
-      "1028/1554 [==================>...........] - ETA: 1:04:30 - loss: 0.1077 - f1: 0.1813"
+      "1554/1554 [==============================] - 11836s 8s/step - loss: 0.1082 - f1: 0.1822 - val_loss: 0.1081 - val_f1: 0.1959\n",
+      "\n",
+      "Epoch 00002: val_loss did not improve from 0.10061\n",
+      "Epoch 3/100\n",
+      "1554/1554 [==============================] - 11686s 8s/step - loss: 0.1068 - f1: 0.1852 - val_loss: 0.1051 - val_f1: 0.2004\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve from 0.10061\n",
+      "Epoch 4/100\n",
+      "1554/1554 [==============================] - 11502s 7s/step - loss: 0.1052 - f1: 0.1905 - val_loss: 0.1044 - val_f1: 0.2013\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve from 0.10061\n",
+      "\n",
+      "Epoch 00004: ReduceLROnPlateau reducing learning rate to 9.999999747378752e-06.\n",
+      "Epoch 5/100\n",
+      "  36/1554 [..............................] - ETA: 2:59:15 - loss: 0.1068 - f1: 0.1866"
      ]
     }
    ],
