--- a/notebooks/train_model_keras.ipynb
+++ b/notebooks/train_model_keras.ipynb
@@ -281,7 +281,7 @@
       "\n",
       "Epoch 00004: ReduceLROnPlateau reducing learning rate to 9.999999747378752e-06.\n",
       "Epoch 5/100\n",
-      "  36/1554 [..............................] - ETA: 2:59:15 - loss: 0.1068 - f1: 0.1866"
+      "  71/1554 [>.............................] - ETA: 2:53:25 - loss: 0.1049 - f1: 0.1922"
      ]
     }
    ],
@@ -306,6 +306,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1"
    ]
