--- a/notebooks/train_model.ipynb
+++ b/notebooks/train_model.ipynb
@@ -131,11 +131,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input_size = 299\n",
-    "input_size = 512\n",
+    "input_size = 299\n",
+    "# input_size = 512\n",
     "train_transform = transforms.Compose([\n",
     "    ToPIL(),\n",
-    "    transforms.RandomResizedCrop(input_size, scale=(0.5,1)),\n",
+    "    transforms.RandomResizedCrop(input_size, scale=(0.4,1)),\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.RandomRotation(90),\n",
     "    transforms.ToTensor(),\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,18 +185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "bz = 16\n",
     "train_loader = torch.utils.data.DataLoader(\n",
-    "    train_dataset, batch_size=16, #sampler=train_sampler,\n",
-    "    num_workers=16\n",
+    "    train_dataset, batch_size=bz, #sampler=train_sampler,\n",
+    "    num_workers=bz\n",
     ")\n",
     "\n",
     "val_loader = torch.utils.data.DataLoader(\n",
-    "    val_dataset, batch_size=16, #sampler=val_sampler,\n",
-    "    num_workers=16\n",
+    "    val_dataset, batch_size=bz, #sampler=val_sampler,\n",
+    "    num_workers=bz\n",
     ")\n",
     "\n",
     "dataloaders = {'train': train_loader, 'val': val_loader}"
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +248,7 @@
      "output_type": "stream",
      "text": [
       "/opt/modules/i12g/anaconda/3-5.0.1/envs/hpaic/lib/python3.6/site-packages/torch/nn/parallel/data_parallel.py:24: UserWarning: \n",
-      "    There is an imbalance between your GPUs. You may want to exclude GPU 2 which\n",
+      "    There is an imbalance between your GPUs. You may want to exclude GPU 0 which\n",
       "    has less than 75% of the memory or cores of GPU 1. You can do so by setting\n",
       "    the device_ids argument to DataParallel, or by setting the CUDA_VISIBLE_DEVICES\n",
       "    environment variable.\n",
@@ -257,12 +258,12 @@
    ],
    "source": [
     "model = inceptionresnetv2(pretrained='imagenet')\n",
-    "model = nn.DataParallel(model)"
+    "model = nn.DataParallel(model, device_ids=[0,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
     "criterion = FocalLoss(gamma=2, logits=True)\n",
     "\n",
     "# Observe that all parameters are being optimized\n",
-    "optimizer_ft = optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-6)\n",
+    "optimizer_ft = optim.Adam(model.parameters(), lr=0.01)\n",
     "\n",
     "# Decay LR by a factor of 0.1 every 7 epochs\n",
     "# exp_lr_scheduler = lr_scheduler.StepLR(optimizer_ft, step_size=7, gamma=0.1)"
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,16 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.compile(optimizer_ft, criterion, device='cuda:0')"
+    "trainer.compile(optimizer_ft, criterion, device=device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,9 +373,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/modules/i12g/anaconda/3-5.0.1/envs/hpaic/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/opt/modules/i12g/anaconda/3-5.0.1/envs/hpaic/lib/python3.6/site-packages/sklearn/metrics/classification.py:1145: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true samples.\n",
+      "  'recall', 'true', average, warn_for)\n"
+     ]
+    }
+   ],
    "source": [
-    "trainer.fit(dataloaders['train'], dataloaders['val'], epochs=3)"
+    "trainer.fit(dataloaders['train'], dataloaders['val'], epochs=3, reduceLROnPlateau=True, sgdr=False)"
    ]
   },
   {
@@ -393,7 +405,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.fit(dataloaders['train'], dataloaders['val'], epochs=60, model_checker = checker)"
+    "trainer.fit(dataloaders['train'], \n",
+    "            dataloaders['val'], \n",
+    "            epochs=60, \n",
+    "            model_checker = checker,\n",
+    "            reduceLROnPlateau=False, \n",
+    "            sgdr=True)"
    ]
   },
   {
@@ -468,8 +485,8 @@
    "outputs": [],
    "source": [
     "all_loader = torch.utils.data.DataLoader(\n",
-    "    all_dataset, batch_size=16, #sampler=val_sampler,\n",
-    "    num_workers=16\n",
+    "    all_dataset, batch_size=bz, #sampler=val_sampler,\n",
+    "    num_workers=bz\n",
     ")"
    ]
   },
